# thread-analysis-server

./: .env  .gitignore  Cargo.toml  README.md  data.db  data.db-shm  data.db-wal
common/: Cargo.toml
common/src/: error.rs  file_utils.rs  lib.rs  string_utils.rs  time_utils.rs
common/src/model/: file_info.rs  mod.rs
config/: default.toml  prod.toml
db/: Cargo.toml
db/src/: connection.rs  lib.rs  workspace.rs
db/src/db_access/: db_cpu.rs  db_file.rs  db_memeory.rs  db_stack.rs  db_thread.rs  db_worksapce.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/config/: mod.rs
domain/src/context/: mod.rs
domain/src/db/: db.rs  db_cpu.rs  db_file.rs  db_memory.rs  db_stack.rs  db_thread.rs  db_workspace.rs  mod.rs
domain/src/model/: cpu.rs  memory.rs  mod.rs  stack.rs  thread.rs
dsl_engine/: Cargo.toml
indexer/: Cargo.toml
indexer/src/: lib.rs
indexer/src/cache/: global.rs  mod.rs  pool.rs
indexer/src/compressor/: encoder.rs  incremental.rs  lru.rs  mod.rs  page.rs  page_table.rs
indexer/src/idx/: index.rs  mod.rs  stack_idx.rs
log_service/: Cargo.toml
migrations/: 20240924134507_file.down.sql  20240924134507_file.up.sql  20240924134545_memory.down.sql  20240924134545_memory.up.sql  20240924134549_thread.down.sql  20240924134549_thread.up.sql  20240924134552_cpu.down.sql  20240924134552_cpu.up.sql
parser/: Cargo.toml
parser/src/: parse.rs
search/: Cargo.toml
storage/: Cargo.toml
storage/src/writer/: mod.rs
task/: Cargo.toml
task/src/: async_task.rs  lib.rs
web_api/: Cargo.toml
web_api/src/: config.rs  logger.rs  resp.rs  state.rs
web_api/src/file/: parse.rs
web_api/src/handlers/: async_task.rs  cpu.rs  file.rs  general.rs  memory.rs  thread.rs
web_api/src/router/: routers.rs
web_api/src/service/: cpu_service.rs  file_service.rs  thread_dump.rs
web_api/src/task/: cache_build.rs  file_prase.rs  mod.rs  stack_build.rs
webserver/: Cargo.toml
webserver/src/: error.rs  routers.rs  state.rs
webserver/src/call_tree/: call_tree.rs  mod.rs
webserver/src/common/: file_utils.rs  mod.rs  utils.rs
webserver/src/db/: db.rs  db_stack.rs  mod.rs
webserver/src/db_access/: db.rs  db_cpu.rs  db_file.rs  db_memeory.rs  db_stack.rs  db_test.rs  db_thread.rs  db_worksapce.rs  mod.rs
webserver/src/file/: index.rs  mod.rs  parse.rs
webserver/src/files/: file.rs  file_analysis.rs  file_handler.rs  file_index.rs  handler_zip_file.rs  index.rs  mod.rs  zip_analysis.rs  zip_extract.rs
webserver/src/handlers/: async_task.rs  cpu.rs  file.rs  file_handle.rs  general.rs  memory.rs  mod.rs  stack.rs  thread.rs  thread_file.rs
webserver/src/models/: config.rs  cpu.rs  fileInfo.rs  file_info.rs  memory.rs  mod.rs  stack.rs  thread.rs
webserver/src/models/db/: cpu.rs  file.rs  memory.rs  mod.rs  stack.rs  thread.rs  workspace.rs
webserver/src/service/: cpu_service.rs  file_service.rs  mod.rs  thread_dump.rs
webserver/src/task/: async_task.rs  file_analysis_task.rs  mod.rs
