[workspace]
members = [
  "domain",
  "dsl_engine",
  "indexer",
  "search",
  "web_api",
  "common",
  "parser"
  ]

[workspace.dependencies]
actix-rt="2.6.0"
actix-web="4.0.0-rc.2"
chrono={version="0.4.19", features=["serde"]}
dotenv="0.15.0" #向env中设置环境变量
#openssl={version="0.10.38", features=["vendored"]}
serde={version="1.0.134",features=["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

zip = "2.1.6"
#压缩目录使用
walkdir = "2.5.0"

regex = "1"

lazy_static = "1.4"
#UUID
uuid = {version = "1.0", features = ["v4"]}

# 数据库配置
sqlx = {version= "0.8.2", features=["runtime-tokio-rustls","tls-rustls","sqlite","time","chrono"]}

# 生成随机数
rand = "0.8"
# 并行处理集合
rayon = "1.10.0" 

itertools="0.14.0"

# 日志
fern="0.7.1"
log="0.4"

# CPU核心数
num_cpus = "1.16"


# 异步任务框架
tokio = { version = "1", features = ["full"] }
futures = "0.3"  # 添加这一行
async-trait = "0.1"
# 配置加载库
config = "0.13"

#全文检索
tantivy = "0.24"  # 使用最新版本

#hash库
fxhash = "0.2"

#全局静态变量
once_cell="1.21.2"
#缓存
cached = "0.55"
# 对于 Windows 系统，设置 `--windows-subsystem=windows` 隐藏控制台窗口
[profile.release]
link_args = ["-subsystem:windows"]