[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
indexer = { path = "../indexer" }

chrono.workspace=true
serde.workspace=true
serde_json.workspace = true

actix-web.workspace = true
rayon.workspace = true
regex.workspace = true
lazy_static.workspace = true
sqlx.workspace = true
dotenv.workspace = true
config.workspace = true