[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

default-run="web-server" 

[dependencies]

#模块依赖
task = { path = "../task" }
db = { path = "../db" }
common = {path = "../common"}
domain = {path = "../domain"}
parser = {path = "../parser"}
indexer = {path = "../indexer"}
storage = {path = "../storage"}

actix-rt.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

zip.workspace = true
#压缩目录使用
walkdir.workspace = true

regex.workspace = true

lazy_static.workspace = true
#UUID
uuid.workspace = true

# 数据库配置
sqlx.workspace = true

# 生成随机数
rand.workspace = true
# 并行处理集合
rayon.workspace = true

itertools.workspace = true

# 日志
fern.workspace = true
log.workspace = true

# CPU核心数
num_cpus.workspace = true


# 异步任务框架
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true



[[bin]]
name="web-server"