[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

default-run="web-server" 

[dependencies]
actix-rt="2.6.0"
actix-web="4.0.0-rc.2"
chrono={version="0.4.19", features=["serde"]}
dotenv="0.15.0" #向env中设置环境变量
#openssl={version="0.10.38", features=["vendored"]}
serde={version="1.0.134",features=["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

zip = "2.1.6"
#压缩目录使用
walkdir = "2.5.0"

regex = "1"

lazy_static = "1.4"
[[bin]]
name="web-server"